deleted button componet based on to much granularity. coded into header component directly. fixed spacing on input bar.

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,9 +6,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 
     @include tablet {
         flex-direction: row;
+        padding: 0 1rem
+    }
+    @include desktop{
+        padding: 0 5rem;
     }
 
     &__form {
@@ -42,13 +47,49 @@
         @include tablet {
             max-width: 2.5rem;
             max-height: 2.5rem;
+            order:3;
         }
+    }
+    &__label{
+        display: flex;
+        padding: 0 .75rem;
+        order: 1;
+        @include tablet{
+            padding: 0 1rem;
+        }
+    }
+    &__input{
+        width: 100%;
+        border-radius:  .25rem;
+        border: $Mercury solid .0625rem;
+        min-height: 2.5rem;
+        min-width: 15rem;
+        padding: 0 1rem;
+        background-image: url(../Assets/Icons/search.svg);
+        background-size: cover;
     }
 
 
     &__button {
+        @include lables-buttons;
+        color:  $white;
         order: 3;
-        margin: 1rem;
+        margin: .75rem;
         display: flex;
+        background-color: $brainFlix-Blue;
+        border-radius: .25rem;
+        border: none;
+        width: 100%;
+        height: 2.5rem;
+        align-items: center;
+        justify-content: center;
+        @include tablet{
+            order:  2;
+            width: 9.375rem;
+        }
+    }
+   
+    &__text{
+        width:100% ;
     }
 }
